# poetry-fastapi-app

./: README.md  pyproject.toml
tests/: test_poetry_fastapi_app.py
