[tool.poetry]
name = "poetry-fastapi-app"
version = "0.1.0"
description = ""
authors = ["haziqfaiz <1201302740@student.mmu.edu.my>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^22.6.0"
requests = "^2.28.1"
fastapi = "^0.78.0"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
